--- a/curso-javascript-projeto-usuarios-master/index.html
+++ b/curso-javascript-projeto-usuarios-master/index.html
@@ -516,6 +516,7 @@
   </footer>
 
 </div>
+<script src="classes/utils.js"></script>
 <script src="models/User.js"></script>
 <script src="controller/UserController.js"></script>
 <script src="index.js"></script>
